--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://www.paypal.com/sdk/js?client-id=AX0eu-Nc2CRQqGb1GJUtM8EcXYXvx71DboD36OEnAZQy7g-iIazXZYhhC77ECfBWd3T3nR2-kN72_fXP"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
